[tool.poetry]
name = "cluster"
version = "0.1.0"
description = ""
authors = ["Егор Домнин <edomnin@ivi.ru>"]

[tool.poetry.dependencies]
python = "3.7"
scikit-learn = "^1.0.1"
joblib = "1.0.0"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
